Rewrited Special:RenameUser to use FormSpecialPage (with OOUI).
Other changes:
* removed block log; added warning if user has been blocked (see 3e3c13dbd1d7673f33b17fff68ce741f48d1e076)

Bug: T100263
Change-Id: I483397ee65be8da12da046d4501f55b2998f317c

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -17,6 +17,8 @@
 	"renameuserconfirm": "Yes, rename the user",
 	"renameusersubmit": "Submit",
 	"renameuser-submit-blocklog": "Show block log for user",
+	"renameusererrorblocked": "This user is <span class=\"plainlinks\">[$1 currently blocked]</span>.",
+	"renameusererrorconfirm": "You did not check the confirmation box.",
 	"renameusererrordoesnotexist": "The user \"<nowiki>$1</nowiki>\" does not exist.",
 	"renameusererrorexists": "The {{GENDER:$1|user}} \"<nowiki>$1</nowiki>\" already exists.",
 	"renameusererrorinvalid": "The username \"<nowiki>$1</nowiki>\" is invalid.",
