--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -17,8 +17,8 @@
 		]
 	},
 	"renameuser": "{{doc-special|RenameUser}}\n{{Identical|Rename user}}",
-	"renameuser-linkoncontribs": "Link description used on [[Special:Contributions]] and [[Special:DeletedContributions]]. Only added if a user has rights to rename users.\n{{Identical|Rename user}}",
-	"renameuser-linkoncontribs-text": "Tooltip for {{msg-mw|renameuser-linkoncontribs}}.",
+	"renameuser-linkoncontribs": "Link description used on [[Special:Contributions]] and [[Special:DeletedContributions]]. Only added if a user has rights to rename users. Parameters:\n* $1 - username, can be used for GENDER\n{{Identical|Rename user}}",
+	"renameuser-linkoncontribs-text": "Tooltip for {{msg-mw|renameuser-linkoncontribs}}. Parameters:\n* $1 - username, can be used for GENDER",
 	"renameuser-desc": "{{desc|name=Rename user|url=https://www.mediawiki.org/wiki/Extension:Renameuser}}",
 	"renameuser-summary": "{{notranslate}}",
 	"renameuserold": "Used as label for the \"Old username\" input box in [[Special:RenameUser]].\n\nSee also:\n* {{msg-mw|Renameusernew}}",
